<resources>
    <string name="app_name">test</string>

    <!--Default string for TextView -->
    <string name="inputDefault">1+2+3</string>
    <string name="outputDefault">5</string>

    <!-- Button Default String's -->

    <!-- Row 1 -->
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>

    <!-- Row 2 -->
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mul">*</string>

    <!-- Row 3 -->
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sub">-</string>

    <!-- Row 4 -->
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="mod">%</string>
    <string name="add">+</string>


    <!-- Row 5 -->
    <string name="clr">C</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="equal">=</string>


</resources>